--- a/rentals/templates/events/rental_order_successfull.html
+++ b/rentals/templates/events/rental_order_successfull.html
@@ -277,7 +277,7 @@
                                   <tr style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;">
                                     <td class="kmTextContent" valign="top" style="border-collapse: collapse; mso-table-lspace: 0; mso-table-rspace: 0; font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;">
                                       <h2 class="shipping-details-title" style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 700 !important; text-transform: uppercase; line-height: normal !important; font-size: 22px; margin-bottom: 8px; margin-top: 35px;">Shipping Address</h2>
-                                      <span style="text-transform: uppercase; font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;"> {{que.user.first_name}} {{que.user.last_name}} <br/>
+                                      <span style="text-transform: uppercase; font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;"> {% if que.user.first_name %} {{que.user.first_name}} {% endif %} {% if que.user.last_name %} {{que.user.last_name}} {% endif %}  <br/>
                                                          {{que.shipping_address.street_address}},<br/>
                                                         {{que.shipping_address.city}}<br/>
                                                         {{que.shipping_address.state}} </span>
